remote/job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
spec:
  replicas: 1
  selector:
    matchLabels:
      name: job
  template:
    metadata:
      labels:
        name: job
    spec:
      containers:
        - env:
            - name: HEALTH_PORT
              value: "8000"
            - name: NODE_ENV
              value: production
            - name: POSTGRES_CA
              valueFrom:
                secretKeyRef:
                  key: postgres-ca
                  name: postgres-ca
            - name: POSTGRES_URI
              valueFrom:
                secretKeyRef:
                  key: postgres-uri
                  name: postgres-uri
            - name: QUEUES
              value: parent
            - name: REDIS_URI
              valueFrom:
                secretKeyRef:
                  key: redis-uri
                  name: redis-uri
            - name: WORKERS
              value: "child:parent"
          image: ghcr.io/my/job:0.0.0
          livenessProbe:
            httpGet:
              path: /live
              port: 8000
          name: job
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
          resources:
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
